--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 		<jeaf.junit.extensions.version>1.6.6</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.7</jeaf.workload.api.version>
 		<jeaf.json.impl.version>1.6.3</jeaf.json.impl.version>
-		<jeaf.test.model.version>1.0.18-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.18</jeaf.test.model.version>
 		
 		<jackson.version>2.13.1</jackson.version>
 	</properties>
