--- a/pom.xml
+++ b/pom.xml
@@ -25,15 +25,15 @@
 	</scm>
 	
 	<properties>
-		<jeaf.x-fun.api.version>1.6.10-SNAPSHOT</jeaf.x-fun.api.version>
-		<jeaf.x-fun.impl.version>1.6.16-SNAPSHOT</jeaf.x-fun.impl.version>
-		<jeaf.tools.api.version>1.6.12-SNAPSHOT</jeaf.tools.api.version>
-		<jeaf.core.api.version>1.6.12-SNAPSHOT</jeaf.core.api.version>
-		<jeaf.core.impl.version>1.6.14-SNAPSHOT</jeaf.core.impl.version>
-		<jeaf.persistence.api.version>1.6.9-SNAPSHOT</jeaf.persistence.api.version>
-		<jeaf.junit.extensions.version>1.6.8-SNAPSHOT</jeaf.junit.extensions.version>
-		<jeaf.workload.api.version>1.6.9-SNAPSHOT</jeaf.workload.api.version>
-		<jeaf.json.impl.version>1.6.5-SNAPSHOT</jeaf.json.impl.version>
+		<jeaf.x-fun.api.version>1.6.10</jeaf.x-fun.api.version>
+		<jeaf.x-fun.impl.version>1.6.16</jeaf.x-fun.impl.version>
+		<jeaf.tools.api.version>1.6.12</jeaf.tools.api.version>
+		<jeaf.core.api.version>1.6.13</jeaf.core.api.version>
+		<jeaf.core.impl.version>1.6.15</jeaf.core.impl.version>
+		<jeaf.persistence.api.version>1.6.10</jeaf.persistence.api.version>
+		<jeaf.junit.extensions.version>1.6.10</jeaf.junit.extensions.version>
+		<jeaf.workload.api.version>1.6.9</jeaf.workload.api.version>
+		<jeaf.json.impl.version>1.6.6</jeaf.json.impl.version>
 		<jeaf.test.model.version>1.0.18</jeaf.test.model.version>
 		
 		<jackson.version>2.13.1</jackson.version>
