--- a/jeaf-generator-test-pojos/pom.xml
+++ b/jeaf-generator-test-pojos/pom.xml
@@ -13,9 +13,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.anaptecs.jeaf.core</groupId>
-			<artifactId>jeaf-core-api</artifactId>
-			<version>${jeaf.core.api.version}</version>
+			<groupId>com.anaptecs.jeaf.tools</groupId>
+			<artifactId>jeaf-tools-api</artifactId>
+			<version>${jeaf.tools.api.version}</version>
 		</dependency>
 		
 		<dependency>
