--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -99,6 +99,7 @@
 					<generateJAXRSAnnotations>true</generateJAXRSAnnotations>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
 					<enableSemVerForJSON>false</enableSemVerForJSON>
+					<generateConstantsForAttributeNames>false</generateConstantsForAttributeNames>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
