--- a/jeaf-generator-test-service-objects/pom.xml
+++ b/jeaf-generator-test-service-objects/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.21</version>
+		<version>1.6.22-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Service Objects</name>
