--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,9 @@
 		<jeaf.persistence.api.version>1.6.10</jeaf.persistence.api.version>
 		<jeaf.junit.extensions.version>1.6.10</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.9</jeaf.workload.api.version>
+		<jeaf.json.api.version>1.6.5</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.6</jeaf.json.impl.version>
-		<jeaf.test.model.version>1.0.20</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.21-SNAPSHOT</jeaf.test.model.version>
 		
 		<jackson.version>2.13.1</jackson.version>
 	</properties>
