--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -18,6 +18,7 @@ info:
     This component represents the OpenAPI interface of the accounting service.
     
     Dear Developers, please be aware that multi line comments can also be used.
+  termsOfService: https://www.anaptecs.de/jeaf/TermsOfUse
   contact:
     name: JEAF Development Team
     url: 'https://www.anaptecs.de/jeaf'
