Fixed problem with polymorph associations

--- a/jeaf-generator-test-open-api/pom.xml
+++ b/jeaf-generator-test-open-api/pom.xml
@@ -121,6 +121,8 @@
 			                   <dateLibrary>java8</dateLibrary>
 			                   <java8>true</java8>
 			                   <hideGenerationTimestamp>true</hideGenerationTimestamp>
+			                   <useTags>true</useTags>
+			                   <interfaceOnly>true</interfaceOnly>
 			                </configOptions>
 			                <configHelp>false</configHelp>
 			                <library>jersey2</library>
