--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		<jeaf.workload.api.version>1.6.9</jeaf.workload.api.version>
 		<jeaf.json.api.version>1.6.5</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.6</jeaf.json.impl.version>
-		<jeaf.test.model.version>1.0.23-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.23</jeaf.test.model.version>
 		
 		<jackson.version>2.13.1</jackson.version>
 	</properties>
